--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -3,9 +3,9 @@
 # jenkins variables
 project_name: docker-baseimage-alpine
 external_type: github_stable
-release_type: stable
-release_tag: 3.9
-ls_branch: master
+release_type: prerelease
+release_tag: 3.8
+ls_branch: 3.8
 repo_vars:
   - EXT_GIT_BRANCH = 'master'
   - EXT_USER = 'just-containers'
