update the shell to show proper symbols for root vs non root

--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -46,7 +46,7 @@ ARG OVERLAY_VERSION
 ARG OVERLAY_ARCH="aarch64"
 
 # environment variables
-ENV PS1="$(whoami)@$(hostname):$(pwd)# " \
+ENV PS1="$(whoami)@$(hostname):$(pwd)\\$ " \
 HOME="/root" \
 TERM="xterm"
 
