--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -46,7 +46,7 @@ ARG OVERLAY_VERSION
 ARG OVERLAY_ARCH="armhf"
 
 # environment variables
-ENV PS1="$(whoami)@$(hostname):$(pwd)# " \
+ENV PS1="$(whoami)@$(hostname):$(pwd)\\$ " \
 HOME="/root" \
 TERM="xterm"
 
