shifting to os type and hard coding overlay version to avoid tag collision

--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -42,7 +42,7 @@ LABEL build_version="Linuxserver.io version:- ${VERSION} Build-date:- ${BUILD_DA
 LABEL MAINTAINER="sparkyballs,TheLamer"
 
 # set version for s6 overlay
-ARG OVERLAY_VERSION
+ARG OVERLAY_VERSION="v1.22.0.0"
 ARG OVERLAY_ARCH="arm"
 
 # environment variables
@@ -63,10 +63,6 @@ RUN \
 	shadow \
 	tzdata && \
  echo "**** add s6 overlay ****" && \
- if [ -z ${OVERLAY_VERSION+x} ]; then \
-	OVERLAY_VERSION=$(curl -sX GET "https://api.github.com/repos/just-containers/s6-overlay/releases/latest" \
-	| awk '/tag_name/{print $4;exit}' FS='[""]'); \
- fi && \
  curl -o \
  /tmp/s6-overlay.tar.gz -L \
 	"https://github.com/just-containers/s6-overlay/releases/download/${OVERLAY_VERSION}/s6-overlay-${OVERLAY_ARCH}.tar.gz" && \
