--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -2,15 +2,12 @@
 
 # jenkins variables
 project_name: docker-baseimage-alpine
-external_type: github_stable
+external_type: os
 release_type: prerelease
 release_tag: 3.8
 ls_branch: 3.8
 repo_vars:
-  - EXT_GIT_BRANCH = 'master'
-  - EXT_USER = 'just-containers'
-  - EXT_REPO = 's6-overlay'
-  - BUILD_VERSION_ARG = 'OVERLAY_VERSION'
+  - BUILD_VERSION_ARG = 'OS'
   - LS_USER = 'linuxserver'
   - LS_REPO = 'docker-baseimage-alpine'
   - CONTAINER_NAME = 'baseimage-alpine'
