--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -17,7 +17,7 @@ full_custom_readme: |
   | :---: | --- |
   | Discord | [Discord](https://discord.gg/YWrKVTn) |
   | IRC | freenode at `#linuxserver.io` more information at:- [IRC][ircurl]
-  | Forum | [Linuserver.io forum][forumurl] |
+  | Forum | [LinuxServer.io forum][forumurl] |
 
   &nbsp;
   &nbsp;
