add edge branch

--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,7 +1,7 @@
-FROM alpine:3.14 as rootfs-stage
+FROM alpine:3.15 as rootfs-stage
 
 # environment
-ENV REL=v3.15
+ENV REL=edge
 ENV ARCH=aarch64
 ENV MIRROR=http://dl-cdn.alpinelinux.org/alpine
 ENV PACKAGES=alpine-baselayout,\
@@ -13,25 +13,25 @@ xz
 
 # install packages
 RUN \
- apk add --no-cache \
-	bash \
-	curl \
-	tzdata \
-	xz
+  apk add --no-cache \
+    bash \
+    curl \
+    tzdata \
+    xz
 
 # fetch builder script from gliderlabs
 RUN \
- curl -o \
- /mkimage-alpine.bash -L \
-	https://raw.githubusercontent.com/gliderlabs/docker-alpine/master/builder/scripts/mkimage-alpine.bash && \
- chmod +x \
-	/mkimage-alpine.bash && \
- ./mkimage-alpine.bash  && \
- mkdir /root-out && \
- tar xf \
-	/rootfs.tar.xz -C \
-	/root-out && \
- sed -i -e 's/^root::/root:!:/' /root-out/etc/shadow
+  curl -o \
+    /mkimage-alpine.bash -L \
+    https://raw.githubusercontent.com/gliderlabs/docker-alpine/master/builder/scripts/mkimage-alpine.bash && \
+  chmod +x \
+    /mkimage-alpine.bash && \
+  ./mkimage-alpine.bash  && \
+  mkdir /root-out && \
+  tar xf \
+    /rootfs.tar.xz -C \
+    /root-out && \
+  sed -i -e 's/^root::/root:!:/' /root-out/etc/shadow
 
 # Runtime stage
 FROM scratch
@@ -56,39 +56,39 @@ HOME="/root" \
 TERM="xterm"
 
 RUN \
- echo "**** install build packages ****" && \
- apk add --no-cache --virtual=build-dependencies \
-	curl \
-	patch \
-	tar && \
- echo "**** install runtime packages ****" && \
- apk add --no-cache \
-	bash \
-	ca-certificates \
-	coreutils \
-	procps \
-	shadow \
-	tzdata && \
- echo "**** create abc user and make our folders ****" && \
- groupmod -g 1000 users && \
- useradd -u 911 -U -d /config -s /bin/false abc && \
- usermod -G users abc && \
- mkdir -p \
-	/app \
-	/config \
-	/defaults && \
- mv /usr/bin/with-contenv /usr/bin/with-contenvb && \
- patch -u /etc/s6/init/init-stage2 -i /tmp/patch/etc/s6/init/init-stage2.patch && \
- echo "**** add qemu ****" && \
- curl -o \
- /usr/bin/qemu-aarch64-static -L \
-        "https://lsio-ci.ams3.digitaloceanspaces.com/qemu-aarch64-static" && \
- chmod +x /usr/bin/qemu-aarch64-static && \
- echo "**** cleanup ****" && \
- apk del --purge \
-	build-dependencies && \
- rm -rf \
-	/tmp/*
+  echo "**** install build packages ****" && \
+  apk add --no-cache --virtual=build-dependencies \
+    curl \
+    patch \
+    tar && \
+  echo "**** install runtime packages ****" && \
+  apk add --no-cache \
+    bash \
+    ca-certificates \
+    coreutils \
+    procps \
+    shadow \
+    tzdata && \
+  echo "**** create abc user and make our folders ****" && \
+  groupmod -g 1000 users && \
+  useradd -u 911 -U -d /config -s /bin/false abc && \
+  usermod -G users abc && \
+  mkdir -p \
+    /app \
+    /config \
+    /defaults && \
+  mv /usr/bin/with-contenv /usr/bin/with-contenvb && \
+  patch -u /etc/s6/init/init-stage2 -i /tmp/patch/etc/s6/init/init-stage2.patch && \
+  echo "**** add qemu ****" && \
+  curl -o \
+    /usr/bin/qemu-aarch64-static -L \
+    "https://lsio-ci.ams3.digitaloceanspaces.com/qemu-aarch64-static" && \
+  chmod +x /usr/bin/qemu-aarch64-static && \
+  echo "**** cleanup ****" && \
+  apk del --purge \
+    build-dependencies && \
+  rm -rf \
+    /tmp/*
 
 # add local files
 COPY root/ /
