Update s6-overlay to v3.1.0.1 for 3.15

--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -13,25 +13,50 @@ xz
 
 # install packages
 RUN \
- apk add --no-cache \
-	bash \
-	curl \
-	tzdata \
-	xz
+  apk add --no-cache \
+    bash \
+    curl \
+    patch \
+    tar \
+    tzdata \
+    xz
 
 # fetch builder script from gliderlabs
 RUN \
- curl -o \
- /mkimage-alpine.bash -L \
-	https://raw.githubusercontent.com/gliderlabs/docker-alpine/master/builder/scripts/mkimage-alpine.bash && \
- chmod +x \
-	/mkimage-alpine.bash && \
- ./mkimage-alpine.bash  && \
- mkdir /root-out && \
- tar xf \
-	/rootfs.tar.xz -C \
-	/root-out && \
- sed -i -e 's/^root::/root:!:/' /root-out/etc/shadow
+  curl -o \
+  /mkimage-alpine.bash -L \
+    https://raw.githubusercontent.com/gliderlabs/docker-alpine/master/builder/scripts/mkimage-alpine.bash && \
+  chmod +x \
+    /mkimage-alpine.bash && \
+  ./mkimage-alpine.bash  && \
+  mkdir /root-out && \
+  tar xf \
+    /rootfs.tar.xz -C \
+    /root-out && \
+  sed -i -e 's/^root::/root:!:/' /root-out/etc/shadow
+
+# set version for s6 overlay
+ARG S6_OVERLAY_VERSION="3.1.0.1"
+ARG S6_OVERLAY_ARCH="aarch64"
+
+# add s6 overlay
+ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-noarch.tar.xz /tmp
+RUN tar -C /root-out -Jxpf /tmp/s6-overlay-noarch.tar.xz
+ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-${S6_OVERLAY_ARCH}.tar.xz /tmp
+RUN tar -C /root-out -Jxpf /tmp/s6-overlay-${S6_OVERLAY_ARCH}.tar.xz
+
+# add s6 optional symlinks
+ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-symlinks-noarch.tar.xz /tmp
+RUN tar -C /root-out -Jxpf /tmp/s6-overlay-symlinks-noarch.tar.xz
+ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-symlinks-arch.tar.xz /tmp
+RUN tar -C /root-out -Jxpf /tmp/s6-overlay-symlinks-arch.tar.xz
+
+# copy ci-checks
+COPY ci-check/ /root-out/package/admin/s6-overlay-${S6_OVERLAY_VERSION}/etc/s6-rc/sources/top/contents.d
+
+# patch cont-init for docker-mods
+COPY patch/ /tmp/patch
+RUN  patch -u /root-out/package/admin/s6-overlay-${S6_OVERLAY_VERSION}/etc/s6-linux-init/skel/rc.init -i /tmp/patch/package/admin/s6-overlay-@VERSION@/etc/s6-linux-init/skel/rc.init.patch
 
 # Runtime stage
 FROM scratch
@@ -41,54 +66,37 @@ ARG VERSION
 LABEL build_version="Linuxserver.io version:- ${VERSION} Build-date:- ${BUILD_DATE}"
 LABEL maintainer="TheLamer"
 
-# set version for s6 overlay
-ARG OVERLAY_VERSION="v2.2.0.3"
-ARG OVERLAY_ARCH="aarch64"
-
-# add s6 overlay
-ADD https://github.com/just-containers/s6-overlay/releases/download/${OVERLAY_VERSION}/s6-overlay-${OVERLAY_ARCH}-installer /tmp/
-RUN chmod +x /tmp/s6-overlay-${OVERLAY_ARCH}-installer && /tmp/s6-overlay-${OVERLAY_ARCH}-installer / && rm /tmp/s6-overlay-${OVERLAY_ARCH}-installer
-COPY patch/ /tmp/patch
-
 # environment variables
 ENV PS1="$(whoami)@$(hostname):$(pwd)\\$ " \
 HOME="/root" \
 TERM="xterm"
 
 RUN \
- echo "**** install build packages ****" && \
- apk add --no-cache --virtual=build-dependencies \
-	curl \
-	patch \
-	tar && \
- echo "**** install runtime packages ****" && \
- apk add --no-cache \
-	bash \
-	ca-certificates \
-	coreutils \
-	procps \
-	shadow \
-	tzdata && \
- echo "**** create abc user and make our folders ****" && \
- groupmod -g 1000 users && \
- useradd -u 911 -U -d /config -s /bin/false abc && \
- usermod -G users abc && \
- mkdir -p \
-	/app \
-	/config \
-	/defaults && \
- mv /usr/bin/with-contenv /usr/bin/with-contenvb && \
- patch -u /etc/s6/init/init-stage2 -i /tmp/patch/etc/s6/init/init-stage2.patch && \
- echo "**** add qemu ****" && \
- curl -o \
- /usr/bin/qemu-aarch64-static -L \
-        "https://lsio-ci.ams3.digitaloceanspaces.com/qemu-aarch64-static" && \
- chmod +x /usr/bin/qemu-aarch64-static && \
- echo "**** cleanup ****" && \
- apk del --purge \
-	build-dependencies && \
- rm -rf \
-	/tmp/*
+  echo "**** install runtime packages ****" && \
+  apk add --no-cache \
+    bash \
+    ca-certificates \
+    coreutils \
+    curl \
+    procps \
+    shadow \
+    tzdata && \
+  echo "**** create abc user and make our folders ****" && \
+  groupmod -g 1000 users && \
+  useradd -u 911 -U -d /config -s /bin/false abc && \
+  usermod -G users abc && \
+  mkdir -p \
+    /app \
+    /config \
+    /defaults && \
+  echo "**** add qemu ****" && \
+  curl -o \
+  /usr/bin/qemu-aarch64-static -L \
+    "https://lsio-ci.ams3.digitaloceanspaces.com/qemu-aarch64-static" && \
+  chmod +x /usr/bin/qemu-aarch64-static && \
+  echo "**** cleanup ****" && \
+  rm -rf \
+    /tmp/*
 
 # add local files
 COPY root/ /
