--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -37,7 +37,7 @@ RUN \
 
 # set version for s6 overlay
 ARG S6_OVERLAY_VERSION="3.1.0.1"
-ARG S6_OVERLAY_ARCH="x86_64"
+ARG S6_OVERLAY_ARCH="aarch64"
 
 # add s6 overlay
 ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-noarch.tar.xz /tmp
