--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -1,3 +1,5 @@
+# syntax=docker/dockerfile:1
+
 FROM alpine:3.15 as rootfs-stage
 
 # environment
@@ -60,7 +62,7 @@ ARG MODS_VERSION="v3"
 LABEL build_version="Linuxserver.io version:- ${VERSION} Build-date:- ${BUILD_DATE}"
 LABEL maintainer="TheLamer"
 
-ADD "https://raw.githubusercontent.com/linuxserver/docker-mods/mod-scripts/docker-mods.${MODS_VERSION}" "/docker-mods"
+ADD --chmod=744 "https://raw.githubusercontent.com/linuxserver/docker-mods/mod-scripts/docker-mods.${MODS_VERSION}" "/docker-mods"
 
 # environment variables
 ENV PS1="$(whoami)@$(hostname):$(pwd)\\$ " \
@@ -89,7 +91,6 @@ RUN \
     /app \
     /config \
     /defaults && \
-  chmod +x /docker-mods && \
   echo "**** add qemu ****" && \
   curl -o \
     /usr/bin/qemu-arm-static -L \
