--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -3,7 +3,7 @@
 # jenkins variables
 project_name: docker-baseimage-alpine
 external_type: os
-release_type: stable
+release_type: prerelease
 release_tag: "3.16"
 ls_branch: "3.16"
 repo_vars:
