--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -2,6 +2,9 @@
 
 # project information
 project_name: baseimage-alpine
+project_deprecation_status: true
+project_deprecation_message: |
+  We recommend switching to a newer tag
 full_custom_readme: |
   {% raw -%}
   [linuxserverurl]: https://linuxserver.io
