--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,42 +1,36 @@
 # syntax=docker/dockerfile:1
 
-FROM alpine:3.16 as rootfs-stage
+FROM alpine:3.17 as rootfs-stage
 
 # environment
-ENV REL=v3.17
+ENV ROOTFS=/root-out
+ENV REL=v3.18
 ENV ARCH=aarch64
 ENV MIRROR=http://dl-cdn.alpinelinux.org/alpine
 ENV PACKAGES=alpine-baselayout,\
 alpine-keys,\
 apk-tools,\
 busybox,\
-libc-utils,\
-xz
+libc-utils
 
 # install packages
 RUN \
   apk add --no-cache \
     bash \
-    curl \
-    tzdata \
     xz
 
-# fetch builder script from gliderlabs
+# build rootfs
 RUN \
-  curl -o \
-  /mkimage-alpine.bash -L \
-    https://raw.githubusercontent.com/gliderlabs/docker-alpine/master/builder/scripts/mkimage-alpine.bash && \
-  chmod +x \
-    /mkimage-alpine.bash && \
-  ./mkimage-alpine.bash  && \
-  mkdir /root-out && \
-  tar xf \
-    /rootfs.tar.xz -C \
-    /root-out && \
+  mkdir -p "$ROOTFS/etc/apk" && \
+  { \
+    echo "$MIRROR/$REL/main"; \
+    echo "$MIRROR/$REL/community"; \
+  } > "$ROOTFS/etc/apk/repositories" && \
+  apk --root "$ROOTFS" --no-cache --keys-dir /etc/apk/keys add --arch $ARCH --initdb ${PACKAGES//,/ } && \
   sed -i -e 's/^root::/root:!:/' /root-out/etc/shadow
 
 # set version for s6 overlay
-ARG S6_OVERLAY_VERSION="3.1.2.1"
+ARG S6_OVERLAY_VERSION="3.1.5.0"
 ARG S6_OVERLAY_ARCH="aarch64"
 
 # add s6 overlay
@@ -80,7 +74,7 @@ RUN \
     curl \
     jq \
     netcat-openbsd \
-    procps \
+    procps-ng \
     shadow \
     tzdata && \
   echo "**** create abc user and make our folders ****" && \
@@ -91,11 +85,6 @@ RUN \
     /app \
     /config \
     /defaults && \
-  echo "**** add qemu ****" && \
-  curl -o \
-    /usr/bin/qemu-aarch64-static -L \
-    "https://lsio-ci.ams3.digitaloceanspaces.com/qemu-aarch64-static" && \
-  chmod +x /usr/bin/qemu-aarch64-static && \
   echo "**** cleanup ****" && \
   rm -rf \
     /tmp/*
