--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -4,8 +4,9 @@
 project_name: docker-baseimage-alpine
 external_type: os
 release_type: stable
-release_tag: "3.17"
+release_tag: "3.18"
 ls_branch: master
+build_armhf: false
 repo_vars:
   - BUILD_VERSION_ARG = 'OS'
   - LS_USER = 'linuxserver'
