--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -3,9 +3,9 @@
 # jenkins variables
 project_name: docker-baseimage-alpine
 external_type: os
-release_type: stable
+release_type: prerelease
 release_tag: "3.18"
-ls_branch: master
+ls_branch: "3.18"
 build_armhf: false
 repo_vars:
   - BUILD_VERSION_ARG = 'OS'
