Add build_version output on init where supported.

--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -92,7 +92,8 @@ RUN \
     /config \
     /defaults \
     /lsiopy && \
-  echo "**** cleanup ****" && \
+    printf "Linuxserver.io version: ${VERSION}\nBuild-date: ${BUILD_DATE}" > /build_version && \
+    echo "**** cleanup ****" && \
   rm -rf \
     /tmp/*
 
