Enable SBOM/Provenance

--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -6,6 +6,8 @@ external_type: os
 release_type: stable
 release_tag: "3.21"
 ls_branch: master
+image_sbom: true
+image_provenance: true
 repo_vars:
   - BUILD_VERSION_ARG = 'OS'
   - LS_USER = 'linuxserver'
