--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -6,6 +6,7 @@ external_type: os
 release_type: prerelease
 release_tag: edge
 ls_branch: edge
+build_riscv64: true
 repo_vars:
   - BUILD_VERSION_ARG = 'OS'
   - LS_USER = 'linuxserver'
