--- a/Dockerfile.riscv64
+++ b/Dockerfile.riscv64
@@ -5,7 +5,7 @@ FROM alpine:3.21 AS rootfs-stage
 ARG S6_OVERLAY_VERSION="3.2.1.0"
 ARG ROOTFS=/root-out
 ARG REL=v3.22
-ARG ARCH=x86_64
+ARG ARCH=riscv64
 ARG MIRROR=http://dl-cdn.alpinelinux.org/alpine
 ARG PACKAGES=alpine-baselayout,\
 alpine-keys,\
