--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -3,9 +3,9 @@
 # jenkins variables
 project_name: docker-baseimage-alpine
 external_type: os
-release_type: stable
+release_type: prerelease
 release_tag: "3.21"
-ls_branch: master
+ls_branch: "3.21"
 image_sbom: true
 image_provenance: true
 repo_vars:
