--- a/Dockerfile.riscv64
+++ b/Dockerfile.riscv64
@@ -2,12 +2,12 @@
 
 FROM alpine:3 AS rootfs-stage
 
-# environment
-ENV ROOTFS=/root-out
-ENV REL=edge
-ENV ARCH=riscv64
-ENV MIRROR=http://dl-cdn.alpinelinux.org/alpine
-ENV PACKAGES=alpine-baselayout,\
+ARG S6_OVERLAY_VERSION="3.2.1.0"
+ARG ROOTFS=/root-out
+ARG REL=edge
+ARG ARCH=riscv64
+ARG MIRROR=http://dl-cdn.alpinelinux.org/alpine
+ARG PACKAGES=alpine-baselayout,\
 alpine-keys,\
 apk-tools,\
 busybox,\
@@ -21,23 +21,19 @@ RUN \
 
 # build rootfs
 RUN \
-  mkdir -p "$ROOTFS/etc/apk" && \
+  mkdir -p "${ROOTFS}/etc/apk" && \
   { \
-    echo "$MIRROR/$REL/main"; \
-    echo "$MIRROR/$REL/community"; \
-  } > "$ROOTFS/etc/apk/repositories" && \
-  apk --root "$ROOTFS" --no-cache --keys-dir /etc/apk/keys add --arch $ARCH --initdb ${PACKAGES//,/ } && \
+    echo "${MIRROR}/${REL}/main"; \
+    echo "${MIRROR}/${REL}/community"; \
+  } > "${ROOTFS}/etc/apk/repositories" && \
+  apk --root "${ROOTFS}" --no-cache --keys-dir /etc/apk/keys add --arch ${ARCH} --initdb ${PACKAGES//,/ } && \
   sed -i -e 's/^root::/root:!:/' /root-out/etc/shadow
-
-# set version for s6 overlay
-ARG S6_OVERLAY_VERSION="3.2.0.2"
-ARG S6_OVERLAY_ARCH="riscv64"
 
 # add s6 overlay
 ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-noarch.tar.xz /tmp
 RUN tar -C /root-out -Jxpf /tmp/s6-overlay-noarch.tar.xz
-ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-${S6_OVERLAY_ARCH}.tar.xz /tmp
-RUN tar -C /root-out -Jxpf /tmp/s6-overlay-${S6_OVERLAY_ARCH}.tar.xz
+ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-${ARCH}.tar.xz /tmp
+RUN tar -C /root-out -Jxpf /tmp/s6-overlay-${ARCH}.tar.xz
 
 # add s6 optional symlinks
 ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-symlinks-noarch.tar.xz /tmp
